# image-search-demo-go

./: .env.example  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  go.mod  go.sum
api/openapi/: embed.go  openapi.json
api/proto/clip/: clip.proto
assets/clip_model/: model.safetensors  tokenizer.json
assets/dataset/: Dockerfile  prepare_dataset.py
cmd/aiosvc/: main.go
deployments/aio-compose/: docker-compose.yaml
deployments/aio-compose/minio/: Dockerfile  create-bucket.sh  docker-entrypoint.sh
migrations/: 001_initialize-database-schema.sql
pkg/clients/clip/: clip.pb.go  clip.proto  clip_grpc.pb.go  endpoint.go  main.go  service.go  transport.go
pkg/errortypes/: error.go  image.go  storage.go
pkg/models/: clip.go  image.go  storage.go
services/clip/: Cargo.toml  build.rs
services/clip/src/: config.rs  main.rs  model.rs  proto.rs  service.rs  utils.rs
services/image/imageendpoint/: endpoints.go
services/image/imagemodel/: model.go
services/image/imagerepository/: repository.go  repository_pg.go
services/image/imageservice/: service.go
services/image/imagetransport/: http.go
services/storage/storageendpoint/: endpoints.go
services/storage/storageservice/: service.go  service_s3.go
services/storage/storagetransport/: http.go  middleware.go
