[package]
name = "clip-service"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0.95"
bytes = "1.9.0"
candle-core = { version = "0.8.1" }
candle-nn = { version = "0.8.1" }
candle-transformers = { version = "0.8.1" }
clap = { version = "4.5.23", features = ["derive", "env"] }
futures = "0.3.31"
image = "0.25.5"
prost = "0.13.4"
prost-types = "0.13.4"
tokenizers = "0.21.0"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros"] }
tonic = "0.12.3"

[dev-dependencies]

[build-dependencies]
tonic-build = "0.12.3"
bindgen_cuda = { version = "0.1.5", optional = true }

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda", "dep:bindgen_cuda"]
metal = ["candle-core/metal", "candle-nn/metal"]